tests/baselines/reference/separateCompilationPlainFile-UMD.errors.txt
tests/cases/compiler/separateCompilationPlainFile-UMD.ts(2,1): error TS1208: Cannot compile namespaces when the '--separateCompilation' flag is provided.


==== tests/cases/compiler/separateCompilationPlainFile-UMD.ts (1 errors) ====
    
    declare function run(a: number): void;
    ~~~~~~~
!!! error TS1208: Cannot compile namespaces when the '--separateCompilation' flag is provided.
    run(1);
    